k8s/jaeger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  namespace: visionsupport
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:latest
          ports:
            - containerPort: 16686
              name: query
            - containerPort: 4317
              name: otlp-grpc
            - containerPort: 4318
              name: otlp-http
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: visionsupport
spec:
  ports:
    - port: 16686
      targetPort: 16686
      name: query
    - port: 4317
      targetPort: 4317
      name: otlp-grpc
    - port: 4318
      targetPort: 4318
      name: otlp-http
  selector:
    app: jaeger
